Adding create a company_product endpoint
