# backend/swagger.yml
@@ -253,7 +253,7 @@ paths:
                 type: object
 
 
-  /goal/order_taker/new:
+  /create/goal/order_taker:
     post:
       operationId: endpoint_entry.goal_order_taker_new
       description: Create goal data for a order taker for this month with JSON data
@@ -274,6 +274,7 @@ paths:
                     description: Database id of order taker
                   goal_total:
                     type: number
+                    minimum: 0
                     description: Money value of goal
                 required:
                  - order_taker_id
@@ -340,6 +341,71 @@ paths:
             properties:
               data:
                 type: array
+
+
+  /create/company_product:
+    post:
+      operationId: endpoint_entry.company_product_create
+      description: Create a new company_product with JSON data
+      parameters:
+        - name: new_product
+          in: body
+          description: Data wrapper
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  company:
+                    type: integer
+                    description: Company database id
+                  name:
+                    type: string
+                    description: Product name
+                  price_buy:
+                    type: number
+                    minimum: 0
+                    description: Price product is purchased for from Company
+                  price_sell:
+                    type: number
+                    minimum: 0
+                    description: Price product is sold for
+                  units_per_price:
+                    type: integer
+                    minimum: 1
+                    description: Number of units of product bought at price_buy
+                  stock:
+                    type: integer
+                    minimum: 0
+                    description: Number of units in stock of item
+                  image_url:
+                    type: string
+                    description: Product image url
+                  description:
+                    type: string
+                    x-nullable: true
+                    description: Product description
+                required:
+                 - company
+                 - name
+                 - price_buy
+                 - price_sell
+                 - units_per_price
+                 - stock
+                 - image_url
+                 - description
+            required:
+             - data
+      responses:
+        200:
+          description: Return data for newly created company_product
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
 
 
 # Shop_order related endpoints
